# PDFPowerExtractor

./: .env.example  .gitignore  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  TECHNICAL_DETAILS.md  analyze_gemma_errors.py  benchmark.py  compare_gemma_gemini.py  debug_cost_calculation.py  debug_page4.md  full_pdf_test_log.txt  package-lock.json  page4_test.md  page4_test_fixed_v2.md  pdfpower.py  pyproject.toml  requirements.txt  sequential_page_1.md  sequential_page_2.md  sequential_page_3.md  setup.py  test_gemma_page5.py  test_harness.py  test_nebius_cost_response.py  test_qwen_page5.py  test_retry_fixed.md  test_setup.py  test_text_only.md  validation_report_model_specific_prompts.md
comparison_results/: B07001_UZN-6T3-0YMF_package_DEBUG_gemini_flash.md  B07001_UZN-6T3-0YMF_package_DEBUG_gemma_3_27b.md  B07001_gemini_flash_20251207-212501.md  B07001_gemini_flash_20251207-212708.md  B07001_gemma_3_27b_20251207-212531.md  B07001_gemma_3_27b_20251207-212746.md  B07001_gemma_3_27b_20251207-213137.md  B07001_gemma_3_27b_latest.md  B07001_gemma_3_27b_with_toc.md  B07001_qwen_vl_72b_20251207-213246.md  comparison_report_B07001_UZN-6T3-0YMF_package_DEBUG.txt  run_log_20251207-212953.json
core/: analyzer.py  extractor.py  processor.py
examples/: README.md
models/: config.py
openspec/changes/add-atomic-batch-extraction/: tasks.md
openspec/changes/add-direct-pdf-upload/: ABANDONED.md  design.md  proposal.md  tasks.md
openspec/changes/add-direct-pdf-upload/specs/pdf-processing/: spec.md
openspec/changes/add-page-toc/specs/caching/: spec.md
openspec/changes/fix-gemma-radio-button-detection/: proposal.md  tasks.md
openspec/changes/fix-gemma-radio-button-detection/specs/prompt-system/: spec.md
openspec/changes/investigate-page-type-concurrency/: FINDINGS.md  design.md  proposal.md  tasks.md
openspec/changes/investigate-page-type-concurrency/specs/extraction-quality/: spec.md
pdfpower_extractor/: __init__.py  cli.py
pdfpower_extractor/core/: __init__.py  analyzer.py  config.py  errors.py  extractor.py  formatter.py  processor.py  prompts.py  validator.py
pdfpower_extractor/models/: __init__.py  config.py
test_results/: gemma_page5_test_b07001_filled_flat_008.txt  qwen_page5_test_b07001_filled_flat_008.txt
tests/: test_audit_logging.py  test_toc_comments.py
