[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfpower-extractor"
version = "1.0.0"
description = "Preserve visual form field relationships when converting PDFs to AI-readable text"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Robert Coenen", email = "rcoenen@github.com"}
]
maintainers = [
    {name = "Robert Coenen", email = "rcoenen@github.com"}
]
keywords = ["pdf", "extraction", "forms", "ai", "openai", "claude", "gemini", "text-processing", "ocr"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup",
    "Topic :: Office/Business :: Office Suites",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "PyMuPDF>=1.23.0",
    "pdf2image>=1.16.3",
    "Pillow>=10.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "tqdm>=4.66.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/rcoenen/PDFPowerExtractor"
"Bug Tracker" = "https://github.com/rcoenen/PDFPowerExtractor/issues"
Documentation = "https://github.com/rcoenen/PDFPowerExtractor#readme"
"Source Code" = "https://github.com/rcoenen/PDFPowerExtractor"

[project.scripts]
pdfpower = "pdfpower_extractor.cli:cli"

[tool.setuptools]
packages = ["pdfpower_extractor", "pdfpower_extractor.core", "pdfpower_extractor.models"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.yml", "*.yaml"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=core --cov=models --cov-report=html --cov-report=term-missing"